Change list: - Added synced folders type config - Added support NFS for synced folders - Added set box distib in config - Added host vadock path

--- a/docker/compose/mysql.yml
+++ b/docker/compose/mysql.yml
@@ -9,7 +9,7 @@ services:
     mysql:
         image: ${VDK_MYSQL_IMAGE_NAME}
         container_name: ${VDK_DOCKER_ID}_${VDK_MYSQL_IMAGE_NAME}
-        command: faketime -f ${VDK_DOCKER_FAKETIME} mysqld --user=root
+        command: mysqld --user=root
         build:
             context: ${VDK_MYSQL_IMAGE_PATH}
             args:
