--- a/vagrant.example.yml
+++ b/vagrant.example.yml
@@ -6,6 +6,9 @@ github_token: <your-personal-github-token>
 # Guest OS timezone
 timezone: Europe/Berlin
 
+# Vagrant distib box
+box: "ubuntu/bionic64"
+
 # Are we need check box updates for every 'vagrant up'?
 box_check_update: false
 
@@ -27,6 +30,9 @@ memory: 2048
 # Memory locked for ElasticSearch
 es_memory: 512m
 
+# Shared folders type (nfs, rsync, ...)
+share_type: vbox
+
 # Vagrant up docker-compose
 docker_compose:
   - php56
@@ -39,6 +45,9 @@ docker_compose:
   
 # HOST MySQL Port
 host_mysql_port: 3307
+
+# HOST vadock-path
+host_vadock_path: .
 
 # HOST WWW-path
 host_www_path: ./../
