--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,5 @@
 # Created by .ignore support plugin (hsz.mobi)
 /.idea
 /.vagrant
-/.env
-/vagrant.yml
-/data
-/docker/compose/custom
-/docker/compose/*.custom.yml
+/config/*
+!/config/default
