--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,4 @@
 /docker/bin/* text=auto eol=lf
 /docker/export/* text=auto eol=lf
 /vagrant/provision/* text=auto eol=lf
+/config/*/.env text=auto eol=lf
