--- a/config/default/compose/pma.yml
+++ b/config/default/compose/pma.yml
@@ -7,16 +7,15 @@ networks:
 
 services:
     pma:
-        image: ${VDK_PMA_IMAGE_NAME}
-        container_name: ${VDK_PMA_IMAGE_NAME}
+        container_name: pma
         build:
             context: ${VDK_PMA_IMAGE_PATH}
             args:
                 - version=${VDK_PMA_IMAGE_VERSION}
         restart: always
         env_file:
-            - ${VDK_DOCKER_HOST_PATH}/.env
+            - ./../.env
         networks:
             - default
         ports:
-            - ${VDK_PMA_PORT}:80
+            - 8080:80
