--- a/config/default/hosts/default.local.conf
+++ b/config/default/hosts/default.local.conf
@@ -1,10 +1,10 @@
 server {
-    server_name new.bogacho.local;
-    root /host/www/new/bogacho/symfony/public;
+    server_name default.local;
+    root /host/www;
     index index.php;
 
-    error_log  /var/log/nginx/new.bogacho.error.log;
-    access_log /var/log/nginx/new.bogacho.access.log;
+    error_log  /var/log/nginx/default.error.log;
+    access_log /var/log/nginx/default.access.log;
 
 	# With PHP-FPM
 	location / {
@@ -19,7 +19,7 @@ server {
         include fastcgi_params;
 
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        fastcgi_pass 127.0.0.1:9072;
+        fastcgi_pass php:9000;
         fastcgi_index index.php;
 
         fastcgi_param PATH_INFO $fastcgi_path_info;
@@ -30,6 +30,7 @@ server {
         #expires 24h;
         #log_not_found off;
         #try_files $uri =404;
+
         try_files $uri $uri/ /index.php?$query_string;
         access_log off;
     }
