--- a/config/default/.env
+++ b/config/default/.env
@@ -1,12 +1,12 @@
 
 VDK_HOST_PATH=/vadock
+VDK_HOST_WWW_PATH=/www
 
 #
 # DOCKER
 #
 
-VDK_DOCKER_HOST_WWW_PATH=/www
-VDK_DOCKER_GUEST_WWW_PATH=/host/www
+VDK_DOCKER_WWW_PATH=/host/www
 
 # Set fake date for PHP, MariaDB
 # Example (Y-m-d H:i:s): "@2020-01-20 23:59:50"
