--- a/projects/default/docker/compose/php.yml
+++ b/projects/default/docker/compose/php.yml
@@ -14,11 +14,11 @@ services:
             context: ../../../../docker/images/php72
             args:
                 - version=7.2-fpm
-                - php_confd_path=${VDK_HOST_PATH}/config/${VDK_PROJECT_NAME}/php/7.2/*
+                - php_confd_path=${VDK_HOST_PATH}/projects/${VDK_PROJECT_NAME}/php/7.2/*
         env_file:
             - ../../.env
         ports:
-            - 9000:9000
+            - 127.0.0.1:9000:9000
         user: www-data
         volumes:
             - ${VDK_HOST_WWW_PATH}:${VDK_DOCKER_WWW_PATH}
