--- a/projects/default/.env
+++ b/projects/default/.env
@@ -1,4 +1,5 @@
 
+VDK_PREFIX=""
 VDK_HOST_PATH=/vadock
 VDK_HOST_WWW_PATH=/www
 
@@ -26,14 +27,21 @@ VDK_NETWORK_NAME=vdk_net
 VDK_COMPOSE_LIST="mariadb,php,nginx,pma"
 
 #
+# PHP
+#
+
+VDK_PHP_VERSION=7.2
+VDK_PHP_PORT=127.0.0.1:9000
+
+#
 # DB
 #
 
+VDK_MYSQL_PORT=3306
 MYSQL_ROOT_PASSWORD=root
 
 #
 # PHPMyAdmin
 #
 
-PMA_HOST=new_pma
 PMA_PORT=3306
