--- a/projects/symfony-demo/nginx/hosts/default.local.conf
+++ b/projects/symfony-demo/nginx/hosts/default.local.conf
@@ -1,10 +1,10 @@
 server {
-    server_name default.local;
-    root /host/www;
+    server_name demo.bogacho.local;
+    root /host/www/public;
     index index.php;
 
-    error_log  /var/log/nginx/default.error.log;
-    access_log /var/log/nginx/default.access.log;
+    error_log  /var/log/nginx/demo.bogacho.error.log;
+    access_log /var/log/nginx/demo.bogacho.access.log;
 
 	# With PHP-FPM
 	location / {
@@ -19,7 +19,7 @@ server {
         include fastcgi_params;
 
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        fastcgi_pass php:9000;
+        fastcgi_pass sfd_php:9172;
         fastcgi_index index.php;
 
         fastcgi_param PATH_INFO $fastcgi_path_info;
