--- a/projects/default/docker/compose/nginx.yml
+++ b/projects/default/docker/compose/nginx.yml
@@ -7,7 +7,8 @@ networks:
 
 services:
     nginx:
-        container_name: nginx
+        image: ${VDK_PREFIX}nginx
+        container_name: ${VDK_PREFIX}nginx
         build:
             context: ../../../../docker/images/nginx
             args:
