--- a/projects/default/docker/compose/pma.yml
+++ b/projects/default/docker/compose/pma.yml
@@ -7,7 +7,8 @@ networks:
 
 services:
     pma:
-        container_name: pma
+        image: ${VDK_PREFIX}pma
+        container_name: ${VDK_PREFIX}pma
         build:
             context: ${VDK_PMA_IMAGE_PATH}
             args:
@@ -18,4 +19,4 @@ services:
         networks:
             - default
         ports:
-            - 8080:80
+            - ${VDK_PMA_PORT}:80
