--- a/projects/symfony-demo/.env
+++ b/projects/symfony-demo/.env
@@ -1,6 +1,7 @@
 
+VDK_PREFIX=sfd_
 VDK_HOST_PATH=/d/projects/bogacho.ru/vadock/symfony
-VDK_HOST_WWW_PATH=/d/projects/bogahco.ru/www/new/symfony-demo
+VDK_HOST_WWW_PATH=/d/projects/bogacho.ru/www/new/bogacho/symfony-demo
 
 #
 # DOCKER
@@ -11,19 +12,26 @@ VDK_DOCKER_WWW_PATH=/host/www
 # Set fake date for PHP, MariaDB
 # Example (Y-m-d H:i:s): "@2020-01-20 23:59:50"
 
-VDK_DOCKER_FAKETIME="+1s"
+VDK_DOCKER_FAKETIME=+1s
 
 #
 # NETWORK
 #
 
-VDK_NETWORK_NAME=sfn_demo_net
+VDK_NETWORK_NAME=sfd_net
 
 #
 # COMPOSE FILE NAMES WITHOUT EXT
 #
 
 VDK_COMPOSE_LIST=mariadb,php,nginx
+
+#
+# PHP
+#
+
+VDK_PHP_VERSION=7.2
+VDK_PHP_PORT=127.0.0.1:9172
 
 #
 # DB
@@ -35,5 +43,4 @@ MYSQL_ROOT_PASSWORD=root
 # PHPMyAdmin
 #
 
-PMA_HOST=new_pma
-PMA_PORT=3306
+PMA_PORT=8080
