--- a/projects/symfony-demo/default/docker/compose/php.yml
+++ b/projects/symfony-demo/default/docker/compose/php.yml
@@ -7,18 +7,18 @@ networks:
 
 services:
     PHP:
-        image: php
-        container_name: php
+        image: ${VDK_PREFIX}php
+        container_name: ${VDK_PREFIX}php
         command: faketime -f ${VDK_DOCKER_FAKETIME} php-fpm
         build:
-            context: ../../../../docker/images/php72
+            context: ../../../../docker/images/php/${VDK_PHP_VERSION}
             args:
-                - version=7.2-fpm
-                - php_confd_path=${VDK_HOST_PATH}/projects/${VDK_PROJECT_NAME}/php/7.2/*
+                - version=${VDK_PHP_VERSION}-fpm
+                - php_confd_path=${VDK_HOST_PATH}/projects/${VDK_PROJECT_NAME}/php/${VDK_PHP_VERSION}/*
         env_file:
             - ../../.env
         ports:
-            - 127.0.0.1:9000:9000
+            - ${VDK_PHP_PORT}:9000
         user: www-data
         volumes:
             - ${VDK_HOST_WWW_PATH}:${VDK_DOCKER_WWW_PATH}
