--- a/projects/default/docker/nginx.yml
+++ b/projects/default/docker/nginx.yml
@@ -10,15 +10,15 @@ services:
         image: ${VDK_PREFIX}nginx
         container_name: ${VDK_PREFIX}nginx
         build:
-            context: ../../../../docker/images/nginx
+            context: ./../../../docker/images/nginx
             args:
                 - version=latest
                 - nginx_conf_path=${VDK_HOST_PATH}/projects/${VDK_PROJECT_NAME}/nginx.conf
         ports:
             - 80:80
         env_file:
-            - ../../.env
+            - ./../.env
         volumes:
             - ${VDK_HOST_WWW_PATH}:${VDK_DOCKER_WWW_PATH}
-            - ./../../nginx/hosts:/etc/nginx/conf.d
-            - ./../../logs:/var/log/nginx
+            - ./../nginx/hosts:/etc/nginx/conf.d
+            - ./../logs:/var/log/nginx
