--- a/projects/default/docker/php.yml
+++ b/projects/default/docker/php.yml
@@ -11,12 +11,12 @@ services:
         container_name: ${VDK_PREFIX}php
         command: faketime -f ${VDK_DOCKER_FAKETIME} php-fpm
         build:
-            context: ../../../../docker/images/php/${VDK_PHP_VERSION}
+            context: ./../../../docker/images/php/${VDK_PHP_VERSION}
             args:
                 - version=${VDK_PHP_VERSION}-fpm
                 - php_confd_path=${VDK_HOST_PATH}/projects/${VDK_PROJECT_NAME}/php/${VDK_PHP_VERSION}/*
         env_file:
-            - ../../.env
+            - ./../.env
         ports:
             - ${VDK_PHP_PORT}:9000
         user: www-data
