--- a/projects/default/docker/pma.yml
+++ b/projects/default/docker/pma.yml
@@ -15,7 +15,7 @@ services:
                 - version=${VDK_PMA_IMAGE_VERSION}
         restart: always
         env_file:
-            - ../../.env
+            - ./../.env
         networks:
             - default
         ports:
