--- a/docker/project/.env
+++ b/docker/project/.env
@@ -1,7 +1,7 @@
 
-VDK_PREFIX=sfd_
-VDK_HOST_PATH=/d/projects/bogacho.ru/vadock/symfony
-VDK_HOST_WWW_PATH=/d/projects/bogacho.ru/www/new/bogacho/symfony-demo
+VDK_PREFIX=""
+VDK_HOST_PATH=/vadock
+VDK_HOST_WWW_PATH=/www
 
 #
 # DOCKER
@@ -12,35 +12,42 @@ VDK_DOCKER_WWW_PATH=/host/www
 # Set fake date for PHP, MariaDB
 # Example (Y-m-d H:i:s): "@2020-01-20 23:59:50"
 
-VDK_DOCKER_FAKETIME=+1s
+VDK_DOCKER_FAKETIME="+1s"
 
 #
 # NETWORK
 #
 
-VDK_NETWORK_NAME=sfd_net
+VDK_NETWORK_NAME=vdk_net
 
 #
 # COMPOSE FILE NAMES WITHOUT EXT
 #
 
-VDK_COMPOSE_LIST=mariadb,php,nginx
+VDK_COMPOSE_LIST="mariadb,php,nginx,pma"
+
+#
+# PHP
+#
+
+VDK_NGINX_PORT=8080
 
 #
 # PHP
 #
 
 VDK_PHP_VERSION=7.2
-VDK_PHP_PORT=127.0.0.1:9172
+VDK_PHP_PORT=127.0.0.1:9000
 
 #
 # DB
 #
 
+VDK_MYSQL_PORT=3306
 MYSQL_ROOT_PASSWORD=root
 
 #
 # PHPMyAdmin
 #
 
-PMA_PORT=8080
+PMA_PORT=3306
