--- a/docker/project/.env
+++ b/docker/project/.env
@@ -1,7 +1,10 @@
+#
+# COMMON
+#
 
 VDK_PREFIX=""
-VDK_HOST_PATH=/vadock
-VDK_HOST_WWW_PATH=/www
+VDK_PATH=/vadock
+VDK_WWW_PATH=/www
 
 #
 # DOCKER
@@ -11,8 +14,7 @@ VDK_DOCKER_WWW_PATH=/host/www
 
 # Set fake date for PHP, MariaDB
 # Example (Y-m-d H:i:s): "@2020-01-20 23:59:50"
-
-VDK_DOCKER_FAKETIME="+1s"
+#VDK_DOCKER_FAKETIME="+1s"
 
 #
 # NETWORK
@@ -30,14 +32,14 @@ VDK_COMPOSE_LIST="mariadb,php,nginx,pma"
 # PHP
 #
 
-VDK_NGINX_PORT=8080
+VDK_NGINX_PORT=80
 
 #
 # PHP
 #
 
 VDK_PHP_VERSION=7.2
-VDK_PHP_PORT=127.0.0.1:9000
+VDK_PHP_PORT=9000
 
 #
 # DB
