--- a/docker/project/nginx/hosts/default.local.conf
+++ b/docker/project/nginx/hosts/default.local.conf
@@ -1,10 +1,11 @@
 server {
-    server_name default.local;
-    root /host/www;
+    listen {VDK_NGINX_PORT};
+    server_name {VDK_HOST_SERVER_NAMES};
+    root {VDK_DOCKER_WWW_PATH}/{VDK_HOST_ROOT};
     index index.php;
 
-    error_log  /var/log/nginx/default.error.log;
-    access_log /var/log/nginx/default.access.log;
+    error_log  /var/log/nginx/{VDK_HOST_NAME}.error.log;
+    access_log /var/log/nginx/{VDK_HOST_NAME}.access.log;
 
 	# With PHP-FPM
 	location / {
@@ -19,7 +20,7 @@ server {
         include fastcgi_params;
 
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        fastcgi_pass php:9000;
+        fastcgi_pass {VDK_PREFIX}php:{VDK_PHP_PORT};
         fastcgi_index index.php;
 
         fastcgi_param PATH_INFO $fastcgi_path_info;
