--- a/docker/project/docker/mariadb.yml
+++ b/docker/project/docker/mariadb.yml
@@ -19,3 +19,5 @@ services:
             - ./../.env
         ports:
             - ${VDK_MYSQL_PORT}:3306
+        volumes:
+            - ${VDK_WWW_PATH}:${VDK_DOCKER_WWW_PATH}
