Many fixes: - Added php-fpm 7.2 alpine - Added composer,mysql,php export bin's - Added redis

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,7 @@
 /vadock text=auto eol=lf
 /bin/export/* text=auto eol=lf
 /docker/bin/* text=auto eol=lf
+/docker/export/* text=auto eol=lf
 /docker/project/.env text=auto eol=lf
 /vagrant/provision/* text=auto eol=lf
 /projects/*/.env text=auto eol=lf
