--- a/docker/project/.env
+++ b/docker/project/.env
@@ -26,10 +26,10 @@ VDK_NETWORK_NAME=vdk_net
 # COMPOSE FILE NAMES WITHOUT EXT
 #
 
-VDK_COMPOSE_LIST="mariadb,php,nginx,pma"
+VDK_COMPOSE_LIST="php,mariadb,nginx,pma"
 
 #
-# PHP
+# NGINX
 #
 
 VDK_NGINX_PORT=80
@@ -53,3 +53,10 @@ MYSQL_ROOT_PASSWORD=root
 #
 
 PMA_PORT=3306
+
+#
+# REDIS
+#
+
+VDK_REDIS_VERSION=latest
+VDK_REDIS_PORT=6379
