--- a/docker/images/php/7.0/Dockerfile
+++ b/docker/images/php/7.0/Dockerfile
@@ -1,7 +1,7 @@
-ARG version
-ARG php_confd_path
+ARG PHP_VERSION
+ARG PHP_CONFD_PATH
 
-FROM php:$version
+FROM php:${PHP_VERSION}
 
 # Доступные имена расширений PHP
 # Possible values for ext-name:
@@ -61,7 +61,7 @@ RUN pecl install apcu && echo "extension=apcu.so" > /usr/local/etc/php/conf.d/ap
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
 
 # Добавим свой php.ini, можем в нем определять свои значения конфига
-ADD $php_confd_path /usr/local/etc/php/conf.d/
+ADD $PHP_CONFD_PATH /usr/local/etc/php/conf.d/
 
 # Указываем рабочую директорию для PHP
 WORKDIR /host
